--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 // store important data here
 
 DB_NAME=student_portal
-DB_PASSWORD=your_postgres_password
-DB_USER=your_postgres_username
+DB_PASSWORD=student123
+DB_USER=benhin
 DB_HOST=localhost
 DB_PORT=5432
 JWT_SECRET=your_super_secret_jwt_key_here
